<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/headerRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ImageButton
            android:id="@+id/startBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button"
            android:contentDescription="@string/start_monitoring"
            android:padding="10dp"
            android:src="@drawable/ic_av_play" />

        <TextView
            android:id="@+id/statusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/startBt"
            android:text="@string/idle_state"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/settingBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/aboutBt"
            android:background="@drawable/button"
            android:contentDescription="@string/setting"
            android:padding="10dp"
            android:src="@drawable/ic_action_settings" />

        <ImageButton
            android:id="@+id/aboutBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button"
            android:contentDescription="@string/about"
            android:padding="10dp"
            android:src="@drawable/ic_action_about" />

        <TextView
            android:id="@+id/elapsedTimeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/statusTv"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </RelativeLayout>

    <View
        android:id="@+id/dividerHeader"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignBottom="@+id/headerRl"
        android:background="@color/white" />

    <TableLayout
        android:id="@+id/settingInfoTl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dividerHeader"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sensingDurationLb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensing_duration_label"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/sensingDurationTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/null_str"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp" >

            <TextView
                android:id="@+id/serverAddressLb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_address_label"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/serverAddressTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/null_str"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp" >

            <TextView
                android:id="@+id/transferPeriodLb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_period_label"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/transferPeriodTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/null_str"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/dividerSettingInfo"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/settingInfoTl"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/contextInfoLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dividerFooter"
        android:layout_below="@+id/dividerSettingInfo"
        android:orientation="vertical"
        android:weightSum="1" >

        <GridView
            android:id="@+id/contextInfoGv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.6"
            android:numColumns="3" >
        </GridView>

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical" >

            <View
                android:id="@+id/dividerContextInfo"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:layout_alignParentTop="true" />

            <ScrollView
                android:id="@+id/contextInfoSv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="5dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >
					
					<TextView
					    android:id="@+id/contextNameTv"
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:layout_marginBottom="5dp"
					    android:textColor="@color/white"
					    android:textSize="12sp" />

                    <TextView
                        android:id="@+id/contextInfoTv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/contextStaticInfoTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </LinearLayout>
            </ScrollView>

            <ImageButton
                android:id="@+id/cancelDisplayingContextInfoBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/button"
                android:contentDescription="@string/cancel_displaying_context_info"
                android:src="@drawable/ic_navigation_cancel" />

        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/dividerFooter"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/copyrightLb"
        android:background="@color/white" />

    <TextView
        android:id="@+id/copyrightLb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:gravity="right"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="10sp" />

</RelativeLayout>